--- a/index.css
+++ b/index.css
@@ -63,7 +63,7 @@ header{
 
 
 h1 {
-    color: #43f00e;
+    color: black;
 }
 
 h2 {
@@ -71,7 +71,7 @@ h2 {
 }
 
 h3 {
-    color: white;
+    color: #43f00e;
 }
 
 h4 {
