--- a/index.css
+++ b/index.css
@@ -47,7 +47,7 @@ header{
 }
 
 .main2 {
-    background-color: black;
+    background-color: #083b3a;
     border-radius: 15px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.0);
     transition: transform 1.2s;
