--- a/index.css
+++ b/index.css
@@ -103,7 +103,7 @@ label {
 
 input {
     display: block;
-    width: 100%;
+    width: 6500%;
     margin-bottom: 15px;
     padding: 10px;
     box-sizing: border-box;
@@ -121,7 +121,7 @@ button {
     border: none;
     color: blue;
     cursor: pointer;
-    background-color: white;
+    background-color: #02f266;
     width: 100%;
     font-size: 16px;
 }
