--- a/index.css
+++ b/index.css
@@ -41,8 +41,8 @@ header{
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
     padding: 10px 20px;
     transition: transform 0.2s;
-    width: 500px;
-    text-align: center;
+    width: 400px;
+    text-align: left;
 }
 
 .main2 {
