--- a/index.css
+++ b/index.css
@@ -86,6 +86,22 @@ h6 {
 .wrap {
 	
 }
+
+.loading {
+  position: fixed; /* Cover the entire screen */
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.7); /* Semi-transparent white background */
+  z-index: 9999; /* Ensure it's on top */
+  display: none; /* Initially hidden */
+  justify-content: center; /* Center the content horizontally */
+  align-items: center; /* Center the content vertically */
+}
+
+
+
 label {
     display: block;
     width: 100%;
