--- a/index.css
+++ b/index.css
@@ -131,7 +131,7 @@ button {
     background-color: #91fc05;
     width: 70%;
     font-size: 18px;
-    text-color: black;
+    text-color: #279c88;
     align-items: center;
 
 }
