--- a/index.css
+++ b/index.css
@@ -32,7 +32,7 @@ header{
 }
 
 .main1 {
-    background-color: #fff;
+    background-color: ;
     border-radius: 15px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
     padding: 10px 20px;
