--- a/index.css
+++ b/index.css
@@ -21,7 +21,7 @@ header{
 }
 
 .main {
-    background-color: #02421f;
+    background-color: ;
     border-radius: 15px;
     box-shadow: 0 0 20px rgba(0, 0, 1, 0.5);
     padding: 10px 20px;
