--- a/index.css
+++ b/index.css
@@ -40,7 +40,7 @@ header{
     width: 300px;
     align-items: center;
     text-align: left;
-    text-color: #a1f70c;
+    text-color: #a4ed11;
 }
 
 .main2 {
