--- a/index.css
+++ b/index.css
@@ -120,6 +120,7 @@ input {
     box-sizing: border-box;
     border: 1px solid #ddd;
     border-radius: 5px;
+    font-size: 14px;
 }
 button {
     padding: 15px;
